Fix unreviewed (lightbulb) icon alignment

--- a/pontoon/base/static/css/heading_info.css
+++ b/pontoon/base/static/css/heading_info.css
@@ -180,6 +180,7 @@ ul {
   left: auto;
   position: relative;
   top: -1px;
+  left: -0.5px;
 }
 
 #heading .non-plottable .unreviewed .status.fas:before {
