--- a/translate/src/modules/search/components/SearchBox.css
+++ b/translate/src/modules/search/components/SearchBox.css
@@ -122,7 +122,7 @@
 .search-box .missing-without-unreviewed .status:before {
   content: '\f0eb';
   font-size: 18px;
-  margin-left: 1px;
+  margin-left: 1.5px;
 }
 
 .filters-panel .menu .missing-without-unreviewed.selected .status::before,
